Fix image icon alignment.

--- a/themes/root/css/icon-helper.css
+++ b/themes/root/css/icon-helper.css
@@ -14,9 +14,9 @@
 .icon--img {
     display: inline-block;
     max-width: 1.25em;
-    margin-top: -0.25em;
+    margin-top: 0.125em;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;
 }
 
 .icon--svg {
